# gaia

./: pyproject.toml  token.txt
gaia/: daisyworld.py  mondoMargherite.py
