[tool.poetry]
name = "gaia"
version = "0.1.0"
description = ""
authors = ["Fausto Zanasi <fausto.zanasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
